--- a/spring_web/src/main/webapp/resources/css/main.css
+++ b/spring_web/src/main/webapp/resources/css/main.css
@@ -21,6 +21,15 @@ ul {
   margin: auto;
 }
 
+.container_list {
+	display: block;
+	width: 850px;
+	background: #fff;
+	margin: 0 auto;
+	padding: 10px 17px;
+	-webkit-box-shadow: 2px 2px 3px -1px rgba(0, 0, 0, 0.35);
+}
+
 /* Nav */
 .main-nav {
   display: flex;
