css 수정본 (업로드 확인용, 01/27 13:20)

--- a/spring_web/src/main/webapp/resources/css/table.css
+++ b/spring_web/src/main/webapp/resources/css/table.css
@@ -125,12 +125,14 @@ h4 {
 	margin: 0 auto;
 	padding: 10px 17px;
 	-webkit-box-shadow: 2px 2px 3px -1px rgba(0, 0, 0, 0.35);
+	position: relative;
 }
 
 #keywords {
 	margin: 0 auto;
 	font-size: 1.2em;
 	margin-bottom: 15px;
+	position: relative;
 }
 
 #keywords thead {
